--- a/LandingPage.html
+++ b/LandingPage.html
@@ -10,12 +10,12 @@
     <meta http-equiv='pragma' content='no-cache'>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <base href=".">
-    <link rel="icon" href="../favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="favicon.ico" type="image/x-icon" />
     <title>Goldwings | Adventurer</title>
-    <link rel="stylesheet" type="text/css" href="../Goldwings/style.css">
-    <link rel="stylesheet" type="text/css" href="../Goldwings/site.css">
-    <link rel="stylesheet" href="../Goldwings/animate.css">
-    <link rel="stylesheet" href="../Goldwings/sitewow.css">
+    <link rel="stylesheet" type="text/css" href="Goldwings/style.css">
+    <link rel="stylesheet" type="text/css" href="Goldwings/site.css">
+    <link rel="stylesheet" href="Goldwings/animate.css">
+    <link rel="stylesheet" href="Goldwings/sitewow.css">
     <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
     <style>
         /********************************************************/
@@ -708,10 +708,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="//cdn.datatables.net/1.10.19/css/jquery.dataTables.min.css">
 </head>
-<link rel="stylesheet" href="../Goldwings/bts.css">
-<link rel="stylesheet" href="../Goldwings/imagehover.css">
-<script src="../Goldwings/jquerymin.js"></script>
-<script src="../Goldwings/jquerybts.js"></script>
+<link rel="stylesheet" href="Goldwings/bts.css">
+<link rel="stylesheet" href="Goldwings/imagehover.css">
+<script src="Goldwings/jquerymin.js"></script>
+<script src="Goldwings/jquerybts.js"></script>
 
 <body id="collection-5a5c2c7df9619a9a190df640" class="transparent-header enable-nav-button nav-button-style-outline nav-button-corner-style-square banner-button-style-outline banner-button-corner-style-square banner-slideshow-controls-arrows meta-priority-category center-entry-title--meta hide-list-entry-footer hide-blog-sidebar center-navigation--info event-thumbnails event-thumbnail-size-32-standard event-date-label event-date-label-time event-list-show-cats event-list-date event-list-time event-list-address event-icalgcal-links event-excerpts event-item-back-link gallery-design-grid aspect-ratio-auto lightbox-style-light gallery-navigation-bullets gallery-info-overlay-show-on-hover gallery-aspect-ratio-32-standard gallery-arrow-style-no-background gallery-transitions-fade gallery-show-arrows gallery-auto-crop product-list-titles-under product-list-alignment-center product-item-size-11-square product-image-auto-crop product-gallery-size-11-square show-product-price show-product-item-nav product-social-sharing newsletter-style-dark opentable-style-light small-button-style-solid small-button-shape-square medium-button-style-outline medium-button-shape-square large-button-style-outline large-button-shape-square image-block-poster-text-alignment-center image-block-card-dynamic-font-sizing image-block-card-content-position-center image-block-card-text-alignment-left image-block-overlap-dynamic-font-sizing image-block-overlap-content-position-center image-block-overlap-text-alignment-left image-block-collage-dynamic-font-sizing image-block-collage-content-position-top image-block-collage-text-alignment-left image-block-stack-dynamic-font-sizing image-block-stack-text-alignment-left button-style-solid button-corner-style-square tweak-product-quick-view-button-style-floating tweak-product-quick-view-button-position-bottom tweak-product-quick-view-lightbox-excerpt-display-truncate tweak-product-quick-view-lightbox-show-arrows tweak-product-quick-view-lightbox-show-close-button tweak-product-quick-view-lightbox-controls-weight-light native-currency-code-usd collection-5a5c2c7df9619a9a190df640 collection-type-index collection-layout-default homepage view-list mobile-style-available has-banner-image index-page">
     <nav class="navbar navbar-default navbar-fixed-top">
@@ -725,7 +725,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 <a class="navbar-brand" href="#">
-                    <img src="../IMAGES/Logos/goldwings1logo.png" alt="Goldwings" class="img img-responsive" style="">
+                    <img src="IMAGES/Logos/goldwings1logo.png" alt="Goldwings" class="img img-responsive" style="">
                 </a>
             </div>
             <div id="navbar" class="navbar-collapse collapse">
@@ -752,21 +752,21 @@
                             <li style="margin-left:2px;margin-right:2px;">
                                 <a style="padding-left:10px;" href="#">
                                     <center>
-                                        <img src="../IMAGES/Logos/plain_adventurer.png" style="max-height:40px; ">
+                                        <img src="IMAGES/Logos/plain_adventurer.png" style="max-height:40px; ">
                                     </center>
                                 </a>
                             </li>
                             <li style="margin-left:2px;margin-right:2px;">
                                 <a style="padding-left:10px;" href="#">
                                     <center>
-                                        <img src="../IMAGES/Logos/plain_livinbox.png" style="max-height:40px; ">
+                                        <img src="IMAGES/Logos/plain_livinbox.png" style="max-height:40px; ">
                                     </center>
                                 </a>
                             </li>
                             <li style="margin-left:2px;margin-right:2px;">
                                 <a style="padding-left:10px;" href="#">
                                     <center>
-                                        <img src="../IMAGES/Logos/plain_tombow.png" style="max-height:40px; ">
+                                        <img src="IMAGES/Logos/plain_tombow.png" style="max-height:40px; ">
                                     </center>
                                 </a>
                             </li>
@@ -811,10 +811,10 @@
             </div>
             <div class="col-md-9 container">
                 <div id="loading" style="display:none;width:100%;height:100%;position:absolute;top:0px;left:0px;padding:2px;background: white;z-index:99;">
-                    <center><img src='../IMAGES/Loading/loading.gif' width="250" height="250" /></center>
+                    <center><img src='IMAGES/Loading/loading.gif' width="250" height="250" /></center>
                 </div>
                 <div id="wait" style="display:none;width:100%;height:100%;position:absolute;top:0px;left:0px;padding:2px;background: white;z-index:99;">
-                    <center><img src='../IMAGES/Loading/loading.gif' width="250" height="250" /></center>
+                    <center><img src='IMAGES/Loading/loading.gif' width="250" height="250" /></center>
                 </div>
                 <div style="margin:10px;">
                     <div id="CategoryHeading"></div>
@@ -845,13 +845,13 @@
             });
         });
     </script>
-    <script src="../Goldwings/defiant.js"></script>
-    <script src="../DATA.js"></script>
-    <script src="../ITEMS.js"></script>
-    <script src="../CustomJS/LANDINGPAGE.js"></script>
-    <script src="../CustomJS/footer.js"></script>
+    <script src="Goldwings/defiant.js"></script>
+    <script src="DATA.js"></script>
+    <script src="ITEMS.js"></script>
+    <script src="CustomJS/LANDINGPAGE.js"></script>
+    <!-- <script src="CustomJS/footer.js"></script> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-zoom/1.7.18/jquery.zoom.min.js"></script>
-    <script src="../Goldwings/velocity.js"></script>
+    <script src="Goldwings/velocity.js"></script>
     <script src="//cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"> </script>
 </body>
 
