--- a/index.html
+++ b/index.html
@@ -9,12 +9,19 @@
     <link rel="icon" href="favicon.ico" type="image/x-icon" />
     <base href=".">
     <title>Goldwings</title>
-    <link rel="stylesheet" type="text/css" href="./Goldwings/style.css">
-    <link rel="stylesheet" type="text/css" href="./Goldwings/site.css">
-    <link rel="stylesheet" href="./Goldwings/animate.css">
-    <link rel="stylesheet" href="./Goldwings/sitewow.css">
+    <link rel="stylesheet" type="text/css" href="Goldwings/style.css">
+    <link rel="stylesheet" type="text/css" href="Goldwings/site.css">
+    <link rel="stylesheet" href="Goldwings/animate.css">
+    <link rel="stylesheet" href="Goldwings/sitewow.css">
     <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
     <style>
+
+body,
+html,
+* {
+font-family: 'Roboto';
+}
+
         hr {
          border: 0;
          margin: 1.35em auto;
@@ -366,94 +373,14 @@
     <!-- <![endif]-->
     <!-- End of Squarespace Headers -->
 </head>
-<link rel="stylesheet" href="./Goldwings/bts.css">
-<link rel="stylesheet" href="./Goldwings/imagehover.css">
-<script src="./Goldwings/jquerymin.js"></script>
-<script src="./Goldwings/jquerybts.js"></script>
+<link rel="stylesheet" href="Goldwings/bts.css">
+<link rel="stylesheet" href="Goldwings/imagehover.css">
+<script src="Goldwings/jquerymin.js"></script>
+<script src="Goldwings/jquerybts.js"></script>
 
-<body id="collection-5a5c2c7df9619a9a190df640" class="transparent-header enable-nav-button nav-button-style-outline nav-button-corner-style-square banner-button-style-outline banner-button-corner-style-square banner-slideshow-controls-arrows meta-priority-category center-entry-title--meta hide-list-entry-footer hide-blog-sidebar center-navigation--info event-thumbnails event-thumbnail-size-32-standard event-date-label event-date-label-time event-list-show-cats event-list-date event-list-time event-list-address event-icalgcal-links event-excerpts event-item-back-link gallery-design-grid aspect-ratio-auto lightbox-style-light gallery-navigation-bullets gallery-info-overlay-show-on-hover gallery-aspect-ratio-32-standard gallery-arrow-style-no-background gallery-transitions-fade gallery-show-arrows gallery-auto-crop product-list-titles-under product-list-alignment-center product-item-size-11-square product-image-auto-crop product-gallery-size-11-square show-product-price show-product-item-nav product-social-sharing newsletter-style-dark opentable-style-light small-button-style-solid small-button-shape-square medium-button-style-outline medium-button-shape-square large-button-style-outline large-button-shape-square image-block-poster-text-alignment-center image-block-card-dynamic-font-sizing image-block-card-content-position-center image-block-card-text-alignment-left image-block-overlap-dynamic-font-sizing image-block-overlap-content-position-center image-block-overlap-text-alignment-left image-block-collage-dynamic-font-sizing image-block-collage-content-position-top image-block-collage-text-alignment-left image-block-stack-dynamic-font-sizing image-block-stack-text-alignment-left button-style-solid button-corner-style-square tweak-product-quick-view-button-style-floating tweak-product-quick-view-button-position-bottom tweak-product-quick-view-lightbox-excerpt-display-truncate tweak-product-quick-view-lightbox-show-arrows tweak-product-quick-view-lightbox-show-close-button tweak-product-quick-view-lightbox-controls-weight-light native-currency-code-usd collection-5a5c2c7df9619a9a190df640 collection-type-index collection-layout-default homepage view-list mobile-style-available has-banner-image index-page">
-    <nav class="navbar navbar-default navbar-fixed-top">
-        <div class="">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
-                    aria-expanded="false" aria-controls="navbar">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="#">
-                    <img src="IMAGES/Logos/goldwings1logo.png" alt="Goldwings" class="img img-responsive" style="">
-                </a>
-            </div>
-            <div id="navbar" class="navbar-collapse collapse">
-                <ul class="nav navbar-nav navbar-right" style="padding-right: 5px;">
-                    <li style="margin-left:2px;margin-right:2px;" class="active">
-                        <a class="button-nav button-nav-trans">
-                            HOME
-                            <div class="line"></div>
-                        </a>
-                    </li>
-                    <li style="margin-left:2px;margin-right:2px;">
-                        <a class="button-nav button-nav-trans">
-                            ABOUT US
-                            <div class="line"></div>
-                        </a>
-                    </li>
-                    <li style="margin-left:2px;margin-right:2px;">
-                        <a class="button-nav button-nav-trans product">
-                            BRANDS ▼
-                            <div class="line"></div>
-                        </a>
-                        <ul class="dropdown" style="border:2px solid #e3192a;">
-                            <div style="background-color: #e3192a;"></div>
-                            <li style="margin-left:2px;margin-right:2px;">
-                                <a style="padding-left:10px;" href="#">
-                                    <center>
-                                        <img src="IMAGES/Logos/plain_adventurer.png" style="max-height:40px; ">
-                                    </center>
-                                </a>
-                            </li>
-                            <li style="margin-left:2px;margin-right:2px;">
-                                <a style="padding-left:10px;" href="#">
-                                    <center>
-                                        <img src="IMAGES/Logos/plain_livinbox.png" style="max-height:40px; ">
-                                    </center>
-                                </a>
-                            </li>
-                            <li style="margin-left:2px;margin-right:2px;">
-                                <a style="padding-left:10px;" href="#">
-                                    <center>
-                                        <img src="IMAGES/Logos/plain_tombow.png" style="max-height:40px; ">
-                                    </center>
-                                </a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li style="margin-left:2px;margin-right:2px;">
-                        <a class="button-nav button-nav-trans">
-                            SERVICES
-                            <div class="line"></div>
-                        </a>
-                    </li>
-                    <li style="margin-left:2px;margin-right:2px;">
-                        <a class="button-nav button-nav-trans">
-                            NEWS
-                            <div class="line"></div>
-                        </a>
-                    </li>
-                    <li style="margin-left:2px;margin-right:2px;">
-                        <a class="button-nav button-nav-trans">
-                            CONTACT US
-                            <div class="line"></div>
-                        </a>
-                    </li>
-                </ul>
-            </div>
-            <!--/.nav-collapse -->
-        </div>
-    </nav>
-    <main id="page" role="main">
+<body>
+<div id="nav"></div>
+    <main  role="main">
         <!--
             -->
         <!--
@@ -1076,9 +1003,11 @@
     <script type="text/javascript" src="Goldwings/instafeed.js"></script>
     <script type="text/javascript" src="Goldwings/custominstafeed.js"></script>
     <script type="text/javascript" src="Goldwings/wow.js"></script>
+    
 <script src="Goldwings/defiant.js"></script>    
     <script src="DATA.js"></script>
     <script src="ITEMS.js"></script>
+<script src="CustomJS/nav.js"></script>
     <script type="text/javascript" src="CustomJS/footer.js"></script>
 
     <script>
